--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         grid-template-columns: 25% 25% 25% 25%;
         grid-gap: 15px 15px;
         padding-top: 2rem;
+        justify-content: center;
     }
 </style>
 <body>
